Fix card overflow in landscape mode on mobile devices

--- a/assets/css/blackjack.css
+++ b/assets/css/blackjack.css
@@ -248,12 +248,6 @@ main {
     transform: rotateY(180deg);
 }
 
-@media (orientation: landscape) {
-    #game-wrapper:not([data-phase="betting"]) .bet {
-        display: none;
-    }
-}
-
 @media screen and (max-width: 1200px){
 
     #game-wrapper {
@@ -323,6 +317,35 @@ main {
         max-width: 100vw;
         height: 600px;
         max-height: 100vh;
+    }
+
+    .playing-card, .card-list>span, #dealer>.card-list {
+        min-width: calc(var(--playing-card-width)*(2/5) / 6);
+        height: calc(var(--playing-card-height)*(2/5));
+    }
+
+    .card-list img {
+        width: calc(var(--playing-card-width)*(2/5))
+    }
+    
+    .card-list > .playing-card:last-child {
+        min-width: calc(var(--playing-card-width)*(2/5));
+    }
+
+    .cards-value, .pot, #dealer-message, #start-button {
+        height: 1.2rem;
+        line-height: 1.2rem;
+        font-size: 1rem;
+    }
+
+    #player-action > *, #player-cash {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 992px) and (orientation: landscape) {
+    #game-wrapper:not([data-phase="betting"]) .bet {
+        display: none;
     }
 
     .playing-card, .card-list>span, #dealer>.card-list {
